// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should print empty test file 1`] = `" EMPTY   /tests/file1.test.ts"`;

exports[`should print empty test file 2`] = `
"
 PASS   /tests/file1.test.ts   10ms
    ● test (empty)   10ms
   ✔  subtest   10ms EMPTY   /tests/file2.test.ts"
`;

exports[`should print for a empty test file name 1`] = `
"
 PASS   /tests/file1.test.ts   10ms
   ✔  <empty test name>   10ms"
`;

exports[`should print report for 1 test file, 1 test clausure and 1 failed function and 1 passed function 1`] = `
"
 FAIL   /tests/file1.test.ts   10ms
   x group -> test case1   10ms
    
    expected: hi
    received: hi!
"
`;

exports[`should print report for 1 test file, 1 test clausure and 1 failed function and 1 passed function 2`] = `
"
 FAIL   /tests/file1.test.ts   10ms
   x group -> test case1   10ms
    
    expected: hi
    received: hi!
"
`;

exports[`should print report for 1 test file, 1 test clausure and 1 test function 1`] = `
"
 PASS   /tests/file1.test.ts   10ms
   ✔  group -> test case1   10ms"
`;

exports[`should print report for 1 test file, 1 test clausure and 1 test function that fail 1`] = `
"
 FAIL   /tests/file1.test.ts   10ms
   x group -> test case1   10ms
    
    expected: hi
    received: hi!
"
`;

exports[`should print report for 1 test file, 1 test clausure and 2 test function 1`] = `
"
 PASS   /tests/file1.test.ts   10ms
   ✔  group -> test case1   10ms"
`;

exports[`should print report for 1 test file, 2 test clausure and 1 failed function and 1 passed function 1`] = `
"
 FAIL   /tests/file1.test.ts   10ms
   x group -> test case1   10ms
    
    expected: hi
    received: hi!

   x group -> test case2   10ms
    
    expected: hi
    received: hi!
"
`;

exports[`should print report for 1 test file, 2 test clausure and 1 failed function and 1 passed function 2`] = `
"
 FAIL   /tests/file1.test.ts   10ms
   ✔  group name -> test case1   10ms
   x group name -> test case2   10ms
    
    expected: hi
    received: hi!
"
`;

exports[`should print report for 1 test file, 2 test clausure and 1 failed function and 1 passed function 3`] = `
"
 FAIL   /tests/file1.test.ts   10ms
   x group -> test case1   10ms
    
    - expected  - 1
    + received  + 1
    
      Object {
    -   \\"a\\": 1,
    +   \\"a\\": 2,
      }
"
`;

exports[`should print report for 1 test file, 2 test clausure and 1 failed function and 1 passed function with stackTrace 1`] = `
"
 FAIL   /tests/file1.test.ts   10ms
   x group -> test case1   10ms
    
    - expected  - 1
    + received  + 1
    
      Object {
    -   \\"a\\": 1,
    +   \\"a\\": 2,
      }

    
    at TestExecutor.printReportData (src/core/testExecutor.ts:202:13)
    at Object.<anonymous> (tests/utils/colors.test.ts:29:39)
"
`;

exports[`should print report for 2 test file, 1 test clausure and 1 test function 1`] = `
"
 PASS   /tests/file1.test.ts   10ms
   ✔  group -> test case1   10ms
 PASS   /tests/file2.test.ts   10ms
   ✔  group -> test case1   10ms"
`;

exports[`should print report for 2 test file, 1 test clausure and 2 test function 1`] = `
"
 PASS   /tests/file1.test.ts   10ms
   ✔  group -> test case1   10ms
 PASS   /tests/file2.test.ts   10ms
   ✔  group -> test case1   10ms"
`;

exports[`should print report for 2 test file, 2 test clausure and 1 failed function and 1 passed function 1`] = `
"
 FAIL   /tests/file1.test.ts   10ms
   x group -> test case1   10ms
    
    expected: hi
    received: hi!

   x group -> test case2   10ms
    
    expected: hi
    received: hi!

 FAIL   /tests/file2.test.ts   10ms
   x group -> test case1   10ms
    
    expected: hi
    received: hi!

   x group -> test case2   10ms
    
    expected: hi
    received: hi!
"
`;

exports[`should print report for 2 test file, 2 test clausure and 2 test function 1`] = `
"
 PASS   /tests/file1.test.ts   10ms
   ✔  group -> test case1   10ms
   ✔  group -> test case2   10ms
 PASS   /tests/file2.test.ts   10ms
   ✔  group -> test case1   10ms
   ✔  group -> test case2   10ms"
`;

exports[`should print subtest for a subgroup 1`] = `
"
 PASS   /tests/file1.test.ts   10ms
    ● test (empty)   10ms
   ✔  subtest   10ms"
`;

exports[`should print tests for a subgroup 1`] = `
"
 PASS   /tests/file1.test.ts   10ms
   ✔  test   10ms"
`;
